[package]
name = "blitzer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", default-features = false, features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"]}
reqwest-middleware = "0.4.0"
reqwest-retry = "0.7.0"
anyhow = "1.0.93"

serde = { version = "1.0.215", features = ["derive"] }
serde_variant = "0.1.3"
strum = "0.26.3"
strum_macros = "0.26.3"
serde_json = "1.0.133"

config = { version = "0.14.0", features = ["toml"] }

mysql = { version = "25.0.1", default-features = false, features = ["default-rustls"] }
teloxide = { version = "0.13.0", default-features = false, features = ["rustls"] }
